--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^15.2.0",
     "daisyui": "^2.51.6",
     "rxjs": "~7.8.0",
+    "socket.io-client": "^4.6.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
